retrieve_ENO_DEV1/objects/Costume__c.object
<CustomObject>
    <fields>
        <fullName>Costume_Number__c</fullName>
        <label>Costume Number</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Dressing_Notes__c</fullName>
        <label>Dressing Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Number_of_Costume_Items_In_General_Stock__c</fullName>
        <label>Number of Costume Items In General Stock</label>
        <summaryFilterItems>
            <field>Costume_Item__c.Status_of_Costume_Item__c</field>
            <operation>equals</operation>
            <value>Dead (sent to General Stock)</value>
        </summaryFilterItems>
        <summaryForeignKey>Costume_Item__c.Costume__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Number_of_Costume_Items__c</fullName>
        <label>Number of Costume Items</label>
        <summaryForeignKey>Costume_Item__c.Costume__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Production_Role__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Production Role</label>
        <referenceTo>Production_Role__c</referenceTo>
        <relationshipLabel>Costumes</relationshipLabel>
        <relationshipName>Costumes_del</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Costume</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>In_General_Stock</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Number_of_Costume_Items_In_General_Stock__c</field>
            <operation>greaterThan</operation>
            <value>0</value>
        </filters>
        <label>In General Stock</label>
    </listViews>
    <nameField>
        <label>Costume Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Costumes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>